fix line wrapping

--- a/static/topbar.directseo.165-10.css
+++ b/static/topbar.directseo.165-10.css
@@ -503,6 +503,9 @@ ul.submenu > li > a:hover {
         font-size: 2em;
         height: 25px;
         padding: 10px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     #pop-menu {
